--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1045</width>
-    <height>632</height>
+    <width>1300</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,21 @@
    <widget class="QLabel" name="display_image">
     <property name="geometry">
      <rect>
-      <x>57</x>
-      <y>-3</y>
+      <x>20</x>
+      <y>0</y>
+      <width>640</width>
+      <height>480</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="display_image_2">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>0</y>
       <width>640</width>
       <height>480</height>
      </rect>
@@ -33,8 +46,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1045</width>
-     <height>30</height>
+     <width>1300</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
